--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-sitemap": "node generate-sitemap.js"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-router-sitemap": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -25,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "vite-plugin-sitemap": "^0.7.1"
   }
 }
