--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "generate-sitemap": "node generate-sitemap.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
